test：Bench*Compare Thread.currentThread().getId() 改 threadId()
JDK19+ getId()已deprecated，统一换 threadId()。

Co-Authored-By: Claude Code <noreply@anthropic.com>